// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. does not render an image if display is not received 1`] = `<View />`;

exports[`2. does not render a primary image if ratio is not received 1`] = `<View />`;

exports[`3. does not render an inline image with no ratio and no caption or credits 1`] = `<View />`;

exports[`4. inline image with no ratio only shows caption and credits 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`5. image with no caption 1`] = `
<View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <Caption
          credits={null}
          text={null}
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`6. image with no display only shows given caption 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`7. image with no display only shows given credits 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`8. primary image renders with caption and credits 1`] = `
<View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <Caption
          credits="Some credit"
          text="Some caption"
        />
      }
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`9. primary image with given resolutions 1`] = `
<View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      caption={
        <Caption
          credits="Some credit"
          text="Some caption"
        />
      }
      highResSize={900}
      lowResSize={50}
      onImagePress={null}
      uri="https://img/someImage"
    />
  </View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;
